# polymarket-tools

./: .env.example  .gitignore  AI_README.md  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
src/: cli.rs  constants.rs  contracts.rs  main.rs
src/commands/: approve.rs  midpoint.rs  mod.rs  order.rs  orderbook.rs  positions.rs  search.rs  status.rs  trade.rs  upgrade.rs
