[package]
name = "polymarket-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
polymarket-client-sdk = { version = "0.3", features = ["gamma", "data"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
dotenv = "0.15"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde_json = "1.0"
alloy = { version = "1.6.3", features = ["full"] }
